# rust-messaging

./: .gitignore  Cargo.toml
messaging/: Cargo.toml
messaging/src/: lib.rs  publisher_options.rs
src/: consumer.rs  consumer_options.rs  publisher.rs
